--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 00:05:03 2018</p>
+         Last Run: Thu Jul 19 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>52</td>
                         <td>3</td>
                         <td>14</td>
@@ -46,7 +46,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>33</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SE</td>
@@ -58,7 +58,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>30</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
@@ -69,12 +69,12 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>19</td>
-                        <td>55</td>
+                        <td>18</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "33",
                  "30",
-                 "19"
+                 "18"
                ]
              },
              {
@@ -198,9 +198,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "53",
                  "52",
-                 "55"
+                 "51",
+                 "54"
                ]
              },
              {
@@ -211,7 +211,7 @@
                  "75",
                  "78",
                  "66",
-                 "54"
+                 "53"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 00:05:03 2018</p>
+         Last Run: Thu Jul 19 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,7 +265,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -276,11 +276,11 @@
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>31</td>
                         <td>6</td>
-                        <td>13</td>
-                        <td>W</td>
+                        <td>11</td>
+                        <td>WSW</td>
                         <td>19</td>
                      </tr>
                      <tr>
@@ -291,7 +291,7 @@
                         <td>15</td>
                         <td>28</td>
                         <td>7</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>44</td>
                      </tr>
@@ -303,9 +303,9 @@
                         <td>15</td>
                         <td>27</td>
                         <td>7</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -423,7 +423,7 @@
                "data":[
                  "0",
                  "0",
-                 "0",
+                 "1",
                  "15",
                  "15"
                ]
@@ -434,7 +434,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "43",
-                 "36",
+                 "37",
                  "31",
                  "28",
                  "27"
@@ -449,7 +449,7 @@
                  "15",
                  "19",
                  "44",
-                 "45"
+                 "46"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 00:05:03 2018</p>
+         Last Run: Thu Jul 19 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -490,24 +490,24 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>3</td>
-                        <td>36</td>
+                        <td>0</td>
+                        <td>38</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>3</td>
-                        <td>40</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>43</td>
+                        <td>0</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -515,11 +515,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>3</td>
-                        <td>47</td>
+                        <td>50</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -627,8 +627,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
+                 "0",
+                 "0",
                  "3"
                ]
              },
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "40",
-                 "47"
+                 "38",
+                 "43",
+                 "50"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "20",
-                 "18"
+                 "23",
+                 "21",
+                 "19"
                ]
              }
            ]
@@ -660,6 +660,244 @@
                                    };
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator6").innerHTML=MyNewChart.generateLegend();
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Thu Jul 19 01:05:03 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>06:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>3</td>
+                        <td>29</td>
+                        <td>2</td>
+                        <td>13</td>
+                        <td>SSE</td>
+                        <td>45</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>4</td>
+                        <td>32</td>
+                        <td>1</td>
+                        <td>13</td>
+                        <td>SE</td>
+                        <td>42</td>
+                     </tr>
+                     <tr>
+                        <td>08:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>4</td>
+                        <td>36</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>ESE</td>
+                        <td>38</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>9</td>
+                        <td>43</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>33</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>9</td>
+                        <td>52</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>30</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator7" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Line.extend({
+         name: "LineAlt",
+         draw: function () {
+         Chart.types.Line.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Temp (C)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "06:00 PM",
+             "07:00 PM",
+             "08:00 PM",
+             "09:00 PM",
+             "10:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "strokeColor":"rgba(92,0,141,1)",
+               "pointColor":"rgba(92,0,141,1)",
+               "fillColor":"rgba(92,0,141,0)",
+               "data":[
+                 "26",
+                 "25",
+                 "24",
+                 "22",
+                 "19"
+               ]
+             },
+             {
+               "label":"temperature",
+               "strokeColor":"rgba(252,49,18,1)",
+               "pointColor":"rgba(252,49,18,1)",
+               "fillColor":"rgba(252,49,18,0)",
+               "data":[
+                 "26",
+                 "25",
+                 "24",
+                 "22",
+                 "19"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).LineAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator7").innerHTML=MyNewChart.generateLegend();
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator8" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Bar.extend({
+         name: "BarAlt",
+         draw: function () {
+         Chart.types.Bar.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Percentage (%)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "06:00 PM",
+             "07:00 PM",
+             "08:00 PM",
+             "09:00 PM",
+             "10:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "strokeColor":"rgba(0,0,255,1)",
+               "fillColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "3",
+                 "4",
+                 "4",
+                 "9",
+                 "9"
+               ]
+             },
+             {
+               "label":"humidity",
+               "strokeColor":"rgba(40,177,255,1)",
+               "fillColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "29",
+                 "32",
+                 "36",
+                 "43",
+                 "52"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "strokeColor":"rgba(233,37,255,1)",
+               "fillColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "45",
+                 "42",
+                 "38",
+                 "33",
+                 "30"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).BarAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator8").innerHTML=MyNewChart.generateLegend();
                </script>
          <hr style="border-width:5px ">
       </div>
