--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 01:05:03 2018</p>
+         Last Run: Thu Jul 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,50 +31,50 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>50</td>
                         <td>55</td>
-                        <td>52</td>
-                        <td>3</td>
-                        <td>14</td>
+                        <td>2</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>75</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>33</td>
-                        <td>52</td>
-                        <td>1</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>34</td>
+                        <td>55</td>
+                        <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>78</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>30</td>
-                        <td>51</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>24</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>E</td>
-                        <td>66</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>18</td>
-                        <td>54</td>
+                        <td>8</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>ENE</td>
-                        <td>53</td>
+                        <td>13</td>
+                        <td>E</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,9 +119,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
-                 "22",
-                 "22",
+                 "21",
+                 "21",
+                 "21",
                  "21"
                ]
              },
@@ -131,9 +131,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
-                 "22",
-                 "22",
+                 "21",
+                 "21",
+                 "21",
                  "21"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "55",
-                 "33",
-                 "30",
-                 "18"
+                 "50",
+                 "34",
+                 "24",
+                 "8"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "52",
-                 "51",
-                 "54"
+                 "55",
+                 "55",
+                 "53",
+                 "55"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "78",
-                 "66",
-                 "53"
+                 "83",
+                 "74",
+                 "60",
+                 "57"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 01:05:03 2018</p>
+         Last Run: Thu Jul 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,11 +253,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -265,11 +265,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -277,11 +277,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>1</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>19</td>
+                        <td>W</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,11 +289,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,11 +301,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "37",
-                 "31",
-                 "28",
-                 "27"
+                 "42",
+                 "36",
+                 "30",
+                 "27",
+                 "26"
                ]
              },
              {
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "6",
                  "8",
-                 "15",
-                 "19",
-                 "44",
-                 "46"
+                 "8",
+                 "36",
+                 "40"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 01:05:03 2018</p>
+         Last Run: Thu Jul 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -488,14 +488,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>23</td>
+                        <td>SE</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -503,11 +503,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>21</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -515,11 +515,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>3</td>
-                        <td>50</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>19</td>
+                        <td>ESE</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -563,7 +563,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "23",
                  "21",
                  "19"
                ]
@@ -574,7 +574,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "23",
                  "21",
                  "19"
                ]
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "43",
-                 "50"
+                 "36",
+                 "41",
+                 "48"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "21",
-                 "19"
+                 "14",
+                 "13",
+                 "13"
                ]
              }
            ]
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 01:05:03 2018</p>
+         Last Run: Thu Jul 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -690,8 +690,8 @@
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>3</td>
-                        <td>29</td>
+                        <td>4</td>
+                        <td>31</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -703,7 +703,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>4</td>
-                        <td>32</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -714,36 +714,36 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
-                        <td>36</td>
+                        <td>5</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>9</td>
-                        <td>43</td>
+                        <td>46</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>ESE</td>
-                        <td>33</td>
+                        <td>14</td>
+                        <td>E</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>9</td>
-                        <td>52</td>
+                        <td>10</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>30</td>
+                        <td>E</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -792,7 +792,7 @@
                  "26",
                  "25",
                  "24",
-                 "22",
+                 "21",
                  "19"
                ]
              },
@@ -805,7 +805,7 @@
                  "26",
                  "25",
                  "24",
-                 "22",
+                 "21",
                  "19"
                ]
              }
@@ -859,11 +859,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
                  "4",
                  "4",
+                 "5",
                  "9",
-                 "9"
+                 "10"
                ]
              },
              {
@@ -871,11 +871,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
-                 "32",
-                 "36",
-                 "43",
-                 "52"
+                 "31",
+                 "34",
+                 "39",
+                 "46",
+                 "54"
                ]
              },
              {
@@ -885,9 +885,9 @@
                "data":[
                  "45",
                  "42",
-                 "38",
-                 "33",
-                 "30"
+                 "37",
+                 "31",
+                 "29"
                ]
              }
            ]
